# greentic-designer-extensions

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
ci/: build-ac-ext.sh  local_check.sh
crates/_wit-lint/: Cargo.toml
crates/_wit-lint/src/: lib.rs
crates/_wit-lint/tests/: parse.rs  roles_interface.rs
crates/greentic-ext-cli/: Cargo.toml  build.rs
crates/greentic-ext-cli/src/: main.rs
crates/greentic-ext-cli/src/commands/: dev.rs  doctor.rs  enable.rs  info.rs  install.rs  keygen.rs  list.rs  login.rs  mod.rs  new.rs  publish.rs  registries.rs  search.rs  sign.rs  uninstall.rs  verify.rs
crates/greentic-ext-cli/src/dev/: builder.rs  event.rs  installer.rs  mod.rs  packer.rs  state.rs  watcher.rs
crates/greentic-ext-cli/src/publish/: mod.rs  validator.rs
crates/greentic-ext-cli/src/scaffold/: contract_lock.rs  embedded.rs  mod.rs  preflight.rs  template.rs
crates/greentic-ext-cli/templates/bundle/: describe.json.tmpl
crates/greentic-ext-cli/templates/bundle/src/: lib.rs.tmpl
crates/greentic-ext-cli/templates/bundle/wit/: world.wit.tmpl
crates/greentic-ext-cli/templates/deploy/: describe.json.tmpl
crates/greentic-ext-cli/templates/deploy/src/: lib.rs.tmpl
crates/greentic-ext-cli/templates/deploy/wit/: world.wit.tmpl
crates/greentic-ext-cli/templates/design/: describe.json.tmpl
crates/greentic-ext-cli/templates/design/src/: lib.rs.tmpl
crates/greentic-ext-cli/templates/design/wit/: world.wit.tmpl
crates/greentic-ext-cli/templates/wasm-component/: describe.json.tmpl
crates/greentic-ext-cli/templates/wasm-component/extension/: Cargo.toml.tmpl
crates/greentic-ext-cli/tests/: cli_dev_once.rs  cli_dev_watch.rs  cli_e2e.rs  cli_enable.rs  cli_new.rs  cli_publish.rs  provider_commands.rs  sign_verify_cmd.rs
crates/greentic-ext-contract/: Cargo.toml
crates/greentic-ext-contract/schemas/: describe-v1.json
crates/greentic-ext-contract/src/: describe.rs  error.rs  kind.rs  lib.rs  pack_writer.rs  schema.rs  signature.rs
crates/greentic-ext-contract/src/describe/: mod.rs
crates/greentic-ext-contract/tests/: capability.rs  describe_roundtrip.rs  kind.rs  signature_rt.rs
crates/greentic-ext-registry/: Cargo.toml
crates/greentic-ext-registry/src/: error.rs  hex.rs  lib.rs  lifecycle.rs  local.rs  local_publish.rs  oci.rs  prompt.rs  provider_install.rs  registry.rs  storage.rs  store.rs  types.rs
crates/greentic-ext-registry/tests/: config.rs  lifecycle.rs  local_publish.rs  local_registry.rs  oci_registry.rs  storage.rs  store_publish.rs  store_registry.rs
crates/greentic-ext-registry/tests/support/: mod.rs
crates/greentic-ext-runtime/: Cargo.toml
crates/greentic-ext-runtime/src/: broker.rs  capability.rs  discovery.rs  error.rs  health.rs  host_bindings.rs  host_state.rs  lib.rs  loaded.rs  pool.rs  runtime.rs  runtime_roles.rs  types.rs  watcher.rs
crates/greentic-ext-runtime/tests/: ac_invoke.rs  ac_validate_content.rs  broker.rs  capability_registry.rs  cycle_detection.rs  deploy_credential_schema.rs  discovery.rs  e2e_discovery.rs  hot_reload.rs  hot_reload_runtime.rs  roles_smoke.rs  runtime_load.rs  scaffold_e2e.rs  signature_gate.rs  state_file_event.rs
crates/greentic-ext-runtime/tests/support/: mod.rs
crates/greentic-ext-state/: Cargo.toml
crates/greentic-ext-state/src/: atomic.rs  state.rs
crates/greentic-ext-state/tests/: state_roundtrip.rs
crates/greentic-ext-testing/: Cargo.toml
crates/greentic-ext-testing/src/: fixture.rs  lib.rs  provider_fixtures.rs
crates/greentic-pack-registry/: Cargo.toml
crates/greentic-pack-registry/src/: client.rs  error.rs  lib.rs
crates/greentic-pack-registry/tests/: client.rs
docs/: README.md  capability-registry.md  cli-reference.md  concept.md  cross-extension-communication.md  describe-json-spec.md  getting-started-dev.md  getting-started-publish.md  getting-started-scaffolding.md  greentic-store-api.openapi.yaml  how-to-write-a-bundle-extension.md  how-to-write-a-deploy-extension.md  how-to-write-a-design-extension.md  how-to-write-a-provider-extension.md  how-to-write-a-wasm-component-extension.md  lifecycle-management.md  permissions-and-trust.md  wit-reference.md
docs/superpowers/plans/: 2026-04-17-ac-reference-extension.md  2026-04-17-cli-and-registry.md  2026-04-17-docs-and-designer-refactor.md  2026-04-17-foundation.md  2026-04-17-plan-4b-designer-refactor-instructions.md  2026-04-17-runtime-wasm-dispatch.md  2026-04-18-extension-signing-pipeline-wave1.md  2026-04-18-phase1-track-a-scaffolding.md  2026-04-19-gtdx-finishing.md  2026-04-19-gtdx-new-provider.md  2026-04-19-phase1-track-c-publish-local.md  2026-04-19-provider-extension-batch-0.md  2026-04-19-store-publish.md  2026-04-19-track-a-scaffold-schema-fix.md  2026-04-25-track-a-scaffold-wasm-component.md  2026-04-25-track-b1-lifecycle-cli.md  2026-04-25-track-b2-lifecycle-designer.md  2026-04-25-track-c1-pack-import-designer.md  2026-04-25-track-c2-pack-import-store-server.md
docs/superpowers/specs/: 2026-04-17-designer-extension-system-design.md  2026-04-18-dx-10-10-roadmap.md  2026-04-18-extension-signing-pipeline-design.md  2026-04-18-phase1-dev-loop-design.md  2026-04-18-phase1-publish-local-design.md  2026-04-18-phase1-scaffolding-design.md  2026-04-19-provider-extension-design.md  2026-04-25-designer-commercialization-backend-design.md
reference-extensions/adaptive-cards/: Cargo.toml  build.sh  describe.json
reference-extensions/adaptive-cards/i18n/: en.json
reference-extensions/adaptive-cards/prompts/: examples.md  rules.md
reference-extensions/adaptive-cards/schemas/: adaptive-card-v1.6.json
reference-extensions/adaptive-cards/src/: bindings.rs  lib.rs
reference-extensions/adaptive-cards/tests/: install_e2e.sh
reference-extensions/adaptive-cards/wit/: world.wit
wit/: extension-bundle.wit  extension-deploy.wit  extension-design.wit  runtime-side.wit
