[workspace]
resolver = "2"
members = [
    "crates/_wit-lint",
    "crates/greentic-ext-contract",
    "crates/greentic-ext-runtime",
    "crates/greentic-ext-cli",
    "crates/greentic-ext-testing",
    "crates/greentic-ext-registry",
    "reference-extensions/adaptive-cards",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/greenticai/greentic-designer-extensions"
rust-version = "1.91"

[workspace.dependencies]
anyhow = "1"
arc-swap = "1.7"
async-trait = "0.1"
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
dialoguer = "0.11"
directories = "5"
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
jsonschema = "0.30"
notify = "7"
oci-client = { version = "0.14", default-features = false, features = ["rustls-tls"] }
notify-debouncer-full = "0.4"
once_cell = "1"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "multipart"] }
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasmtime = { version = "43", features = ["component-model", "async"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
wasmtime-wasi = "43"
wasmtime-wasi-http = "43"
wit-bindgen = "0.41"
wit-bindgen-rt = "0.41"
wit-parser = "0.221"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
