[workspace]
resolver = "2"
members = [
    "crates/_wit-lint",
    "crates/greentic-ext-runtime",
]
# greentic-ext-contract, greentic-ext-state, greentic-ext-registry,
# greentic-ext-testing, and greentic-ext-cli (gtdx) extracted to the public SDK
# repo at https://github.com/greenticai/greentic-designer-sdk and consumed via
# git dep below until they land on crates.io.

[workspace.package]
edition = "2024"
version = "0.4.0"
license = "MIT"
repository = "https://github.com/greenticai/greentic-designer-extensions"
rust-version = "1.94"

[workspace.dependencies]
anstyle = "1"
anyhow = "1"
ciborium = "0.2"
arc-swap = "1.7"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive", "env"] }
dialoguer = "0.11"
directories = "5"
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
fs2 = "0.4"
include_dir = "0.7"
jsonschema = "0.30"
notify = "7"
oci-client = { version = "0.14", default-features = false, features = ["rustls-tls"] }
notify-debouncer-full = "0.4"
once_cell = "1"
pkcs8 = { version = "0.10", features = ["pem"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "multipart"] }
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_jcs = "0.1"
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "time", "fs", "io-util", "process"] }
tokio-util = { version = "0.7", features = ["io", "rt"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
wasmtime = { version = "43", features = ["component-model", "async"] }
which = "6"
zip = { version = "2", default-features = false, features = ["deflate"] }
wasmtime-wasi = "43"
wasmtime-wasi-http = "43"
wit-bindgen = "0.41"
wit-bindgen-rt = "0.41"
wit-parser = "0.221"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
