[workspace]
resolver = "2"
members = [
    "crates/_wit-lint",
    "crates/greentic-ext-runtime",
]

[workspace.package]
edition = "2024"
version = "1.1.0-dev.0"
license = "MIT"
repository = "https://github.com/greenticai/greentic-designer-extensions"
rust-version = "1.94"

[workspace.dependencies]
anstyle = "1"
anyhow = "1"
ciborium = "0.2"
arc-swap = "1.7"
async-trait = "0.1"
base64 = "0.22"
dialoguer = "0.11"
directories = "5"
fs2 = "0.4"
include_dir = "0.7"
jsonschema = "0.30"
notify = "7"
notify-debouncer-full = "0.4"
once_cell = "1"
rand = "0.8"
serde_jcs = "0.1"
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
toml = "0.8"
tracing = "0.1"
walkdir = "2"
which = "6"
wasmtime-wasi = "43"
wasmtime-wasi-http = "43"
wit-bindgen = "0.41"
wit-bindgen-rt = "0.41"
wit-parser = "0.221"

[workspace.dependencies.chrono]
version = "0.4"
default-features = false
features = [
    "serde",
    "clock",
]

[workspace.dependencies.clap]
version = "4.5"
features = [
    "derive",
    "env",
]

[workspace.dependencies.ed25519-dalek]
version = "2.1"
features = [
    "serde",
    "rand_core",
]

[workspace.dependencies.oci-client]
version = "0.14"
default-features = false
features = [
    "rustls-tls",
]

[workspace.dependencies.pkcs8]
version = "0.10"
features = [
    "pem",
]

[workspace.dependencies.reqwest]
version = "0.12"
default-features = false
features = [
    "rustls-tls",
    "json",
    "stream",
    "multipart",
]

[workspace.dependencies.semver]
version = "1"
features = [
    "serde",
]

[workspace.dependencies.serde]
version = "1"
features = [
    "derive",
]

[workspace.dependencies.time]
version = "0.3"
features = [
    "formatting",
    "macros",
]

[workspace.dependencies.tokio]
version = "1"
features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "signal",
    "time",
    "fs",
    "io-util",
    "process",
]

[workspace.dependencies.tokio-util]
version = "0.7"
features = [
    "io",
    "rt",
]

[workspace.dependencies.tracing-subscriber]
version = "0.3"
features = [
    "env-filter",
]

[workspace.dependencies.wasmtime]
version = "43"
features = [
    "component-model",
    "async",
]

[workspace.dependencies.zip]
version = "2"
default-features = false
features = [
    "deflate",
]

[workspace.lints.clippy]
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[workspace.lints.clippy.all]
level = "warn"
priority = -1

[workspace.lints.clippy.pedantic]
level = "warn"
priority = -1
