[package]
name = "greentic-ext-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "gtdx: CLI for Greentic Designer Extensions"
publish = false

[[bin]]
name = "gtdx"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dialoguer = { workspace = true }
directories = { workspace = true }
greentic-ext-contract = { path = "../greentic-ext-contract" }
greentic-ext-registry = { path = "../greentic-ext-registry" }
greentic-ext-runtime = { path = "../greentic-ext-runtime" }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
greentic-ext-testing = { path = "../greentic-ext-testing" }
tempfile = { workspace = true }

[lints]
workspace = true
