[package]
name = "greentic-ext-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "gtdx: CLI for Greentic Designer Extensions"
publish = false

[[bin]]
name = "gtdx"
path = "src/main.rs"

[dependencies]
anstyle = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
dialoguer = { workspace = true }
directories = { workspace = true }
ed25519-dalek = { workspace = true, features = ["pkcs8", "pem"] }
greentic-ext-contract = { path = "../greentic-ext-contract" }
greentic-ext-registry = { path = "../greentic-ext-registry" }
greentic-ext-runtime = { path = "../greentic-ext-runtime" }
include_dir = { workspace = true }
notify-debouncer-full = { workspace = true }
pkcs8 = { workspace = true }
rand = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
which = { workspace = true }
zip = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }

[dev-dependencies]
greentic-ext-testing = { path = "../greentic-ext-testing" }
tempfile = { workspace = true }

[lints]
workspace = true
