[package]
name = "greentic-ext-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Wasmtime-based runtime for Greentic Designer Extensions"
publish = false

[dependencies]
anyhow = { workspace = true }
arc-swap = { workspace = true }
greentic-extension-sdk-contract = { git = "https://github.com/greenticai/greentic-designer-sdk", branch = "main", package = "greentic-extension-sdk-contract" }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }

[dev-dependencies]
ed25519-dalek = { workspace = true }
greentic-extension-sdk-testing = { git = "https://github.com/greenticai/greentic-designer-sdk", branch = "main", package = "greentic-extension-sdk-testing" }
rand = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
wat = "1"

[lints]
workspace = true
