[package]
name = "greentic-ext-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Wasmtime-based runtime for Greentic Designer Extensions"
publish = false

[dependencies]
greentic-extension-sdk-contract = "0.4"

[dependencies.anyhow]
workspace = true

[dependencies.arc-swap]
workspace = true

[dependencies.notify]
workspace = true

[dependencies.notify-debouncer-full]
workspace = true

[dependencies.semver]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.tokio]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.wasmtime]
workspace = true

[dependencies.wasmtime-wasi]
workspace = true

[dev-dependencies]
greentic-extension-sdk-testing = "0.4"
wat = "1"

[dev-dependencies.ed25519-dalek]
workspace = true

[dev-dependencies.rand]
workspace = true

[dev-dependencies.tempfile]
workspace = true

[dev-dependencies.tokio]
workspace = true

[dev-dependencies.tracing-subscriber]
workspace = true

[lints]
workspace = true
