[package]
name = "greentic-adaptive-cards-extension"
version = "1.6.0"
edition = "2024"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
wit-bindgen = { workspace = true }
wit-bindgen-rt = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
adaptive-card-core = { git = "ssh://git@github.com/greentic-biz/greentic-adaptive-card-mcp", rev = "ee268d7b67aee515914edc9c34daf7824bc09809" }

[package.metadata.component]
package = "greentic:adaptive-cards-extension"

[package.metadata.component.target]
path = "wit"
world = "design-extension"

[package.metadata.component.target.dependencies]
"greentic:extension-base" = { path = "../../wit/extension-base.wit" }
"greentic:extension-host" = { path = "../../wit/extension-host.wit" }
"greentic:extension-design" = { path = "../../wit/extension-design.wit" }

[lints]
workspace = true
